DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Mar-09-2005 patrickh    Extended the OpenGL frame buffer configuration to allow
                        setting preferences for the auxiliary buffers, the
                        stencil buffer, and the accumulation buffer.
                        NEW VERSION: 1.1.168
Feb-03-2005 patrickh    Use JCCL 0.92.1 handling of the .jdef search path.
                        Now, $JCCL_DEFINITION_PATH augments the .jdef search
                        path rather than defining it outright.
Jan-31-2005 patrickh    Separated the builds for VR Juggler and VRJConfig.

[2.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 1.1.167
Jan-11-2005 patrickh    Added a VRJConfig custom editor for flock config
                        elements.
Jan-09-2005 patrickh    Added a VRJConfig custom editor for motion_star config
                        elements.

[2.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 1.1.166
Dec-22-2004 allenb      Added proof of concept code showing graphical display
                        of performance data from the Kernel.
                        Added performance collection to the kernel loop.
Dec-22-2004 allenb      Make Kernel::getThread() return a vpr::Thread*.
                        NEW VERSION: 1.1.165
Dec-20-2004 dshipton    OpenSG's callback for getSceneRoot has been changed to
                        getScene() to be in sync with Pf and OSG.
Dec-01-2004 patrickh    Updated to require Gadgeteer 0.21.0.
                        NEW VERSION: 1.1.164
Nov-30-2004 patrickh    Updated to take advantage of .jdef file format
                        extensions added in JCCL 0.24.0.
                        NEW VERSION: 1.1.163
Nov-26-2004 patrickh    Renamed the config element type sound_manager to